# rsomics-edger-glm-lrt

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs  special.rs
tests/: compat.rs
tests/golden/: counts.tsv  design.tsv  expected_coef2_disp0.1.tsv
