[package]
name = "rsomics-edger-glm-lrt"
version = "0.1.0"
description = "edgeR glmFit + glmLRT — negative-binomial GLM fit and likelihood-ratio test of a coefficient or contrast (logFC, logCPM, LR, PValue, FDR)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-edger-glm-lrt"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-edger-glm-lrt"
path = "src/main.rs"

[lib]
name = "rsomics_edger_glm_lrt"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
libm = "0.2"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
